--- a/NoBadClothes/Properties/launchSettings.json
+++ b/NoBadClothes/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/NoBadClothes",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:2902/",
       "sslPort": 0
@@ -11,7 +15,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "test.html",
+      "launchUrl": "clothes.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
